// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`serializeMd serializes a simple paragraph 1`] = `
"# Playground

## Comments and suggestions

Add comments to your content to provide additional conte1xt, insightssuggestions, or collaborate with others

### Heading

* 1

  * 2

    * 3

      * 4

* parent style change

  1. child ordered style split

  * child bullet style split

  - [x] child todo style split

| 1-1 | 1-2 |
| --- | --- |
| 2-1 | 2-2 |

> blockQuote

***

normal **bold**_italic_~~strikethrough~~\`code\`_**combine**_[link](https://example.com)$E=mc^2$

![test](https://images.unsplash.com/photo-1712688930249-98e1963af7bd?q=80\\&w=2070\\&auto=format\\&fit=crop\\&ixlib=rb-4.0.3\\&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D "test")

\`\`\`javascript
// Use code blocks to showcase code snippets
function greet() {
  console.info('Hello World!');
}
\`\`\`

$$
f(x)
$$

<toc />

* [x] Todo item

1. Numbered list item

Centered text

Text with custom line height

<file name="sample.pdf" src="https://example.com/sample.pdf" />

<audio src="https://example.com/audio.mp3" />

<video src="https://example.com/video.mp4" />

<column_group layout="[50,50]">
  <column width="50%">
    Left column
  </column>

  <column width="50%">
    Right column
  </column>
</column_group>

Mention: [User](mention:User)

Date: <date>2024-01-01</date>

Text with <mark>highlight</mark> and <u>underline</u> and <kbd>keyboard</kbd> formatting

Text with <span style="color: rgb(252, 109, 38);">color</span> and <span style="background-color: rgb(252, 109, 38);">background</span> color

Superscript: x<sup>2</sup>Subscript: x<sub>2</sub>

<callout icon="💡">
  callout
</callout>
"
`;

exports[`serializeMd fixtures serializes marks with trailing whitespace 1`] = `
"Make text **bold**, _italic_, <u>underlined</u>, or apply a _**<u>combination</u>**_ of these styles for a visually striking effect.
"
`;

exports[`serializeMd fixtures keeps bold and italic formatting at the start of a block 1`] = `
"_**Italic**_ **in a bold paragraph**

**This is an _Italic_** **in a bold paragraph**
"
`;

exports[`serializeMd fixtures serializes inline code 1`] = `
"_**\`Inline code\`**_

_\`Inline code\`_
"
`;

exports[`serializeMd fixtures serializes a block quote as a single line 1`] = `
"> Block quote with a new line _**\` Inline code\`**_
"
`;

exports[`serializeMd fixtures serializes a code block 1`] = `
"\`\`\`
Code block 1 line 1
Code block 1 line 2
Code block 1 line 3
Code block 1 line 4
\`\`\`
"
`;

exports[`serializeMd fixtures serializes a \\n within a block quote as a new line 1`] = `
"> Block quote\\
> with a new line
"
`;

exports[`serializeMd fixtures serializes two \\n within a block quote as two new lines 1`] = `
"> Block quote\\
> \\
> with a new line
"
`;

exports[`serializeMd serializes a trailing break in a paragraph as <br /> 1`] = `
"Paragaph with a new Line
<br />
"
`;

exports[`serializeMd serializes paragraphs containing only a new line as <br /> 1`] = `
"
<br />


<br />
"
`;
